mysql/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todonodejs
    name: frontend
  name: frontend
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8000
  selector:
    name: frontend
