mysql/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: todonodejs
    name: route-frontend
  name: frontend
  namespace: mysql
spec:
  host: todo.apps.demo-hub-cluster.sandbox2951.opentlc.com
  path: "/todo/"
  to:
    kind: Service
    name: frontend
    weight: 100
  wildcardPolicy: None
